bin_PROGRAMS = a2

a2_SOURCES = \
	bitmap.cpp \
	camera.cpp \
	MatrixStack.cpp \
	modelerapp.cpp \
	modelerui.cpp \
	ModelerView.cpp \
	Joint.cpp \
	SkeletalModel.cpp \
	Mesh.cpp \
	main.cpp

noinst_include_HEADERS = \
	Joint.h \
	MatrixStack.h \
	Mesh.h \
	ModelerView.h \
	SkeletalModel.h \
	bitmap.h \
	camera.h \
	modelerapp.h \
	modelerui.h \
	tuple.h
