bin_PROGRAMS = a2

AM_CPPFLAGS = ${VECM_CFLAGS} ${FLTK_CFLAGS} ${GL_CFLAGS}
AM_LDFLAGS = ${VECM_LDFLAGS} ${FLTK_LDFLAGS} ${GL_LIBS}

a2_SOURCES = \
	bitmap.cpp \
	camera.cpp \
	MatrixStack.cpp \
	modelerapp.cpp \
	modelerui.cpp \
	ModelerView.cpp \
	Joint.cpp \
	SkeletalModel.cpp \
	Mesh.cpp \
	main.cpp
