bin_PROGRAMS = tracer

tracer_SOURCES = \
	main.cpp \
	BoundingBox.cpp \
	BoundingSphere.cpp \
	Camera.cpp \
	Checkerboard.cpp \
	DirectionalLight.cpp \
	Film.cpp \
	Filter.cpp \
	Grid.cpp \
	Group.cpp \
	Image.cpp \
	Light.cpp \
	Marble.cpp \
	Material.cpp \
	Noise.cpp \
	Object3D.cpp \
	PerlinNoise.cpp \
	Plane.cpp \
	PointLight.cpp \
	RayTracer.cpp \
	Sample.cpp \
	SampleDebugger.cpp \
	Sampler.cpp \
	SceneParser.cpp \
	Sphere.cpp \
	Transform.cpp \
	Triangle.cpp \
	Wood.cpp
